[gd_scene load_steps=4 format=3 uid="uid://bmbhegyeid52l"]

[ext_resource type="Script" uid="uid://c1hlo5bigln6x" path="res://scenes/combatScene/combatLogic/turn_queue.gd" id="1_hwuu1"]
[ext_resource type="Script" uid="uid://lvjg7lppcv2u" path="res://scenes/combatScene/combatLogic/battle_initializer.gd" id="1_x7kyd"]
[ext_resource type="PackedScene" uid="uid://fd3yk1rhccrb" path="res://scenes/combatScene/combatUI/combat_ui.tscn" id="3_4k4p4"]

[node name="BattleInitializer" type="Node"]
script = ExtResource("1_x7kyd")

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("1_hwuu1")

[node name="PlayerTeamContainer" type="Node2D" parent="."]

[node name="EnemyTeamContainer" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CombatUI" parent="CanvasLayer" instance=ExtResource("3_4k4p4")]
offset_top = -2.0
